Added dependencies for Java FX.